--- a/examples/ldavis/LDAvis.css
+++ b/examples/ldavis/LDAvis.css
@@ -1,2 +1,19 @@
 /* Taken from https://github.com/cpsievert/LDAvis */
-/* Copyright 201
+/* Copyright 2013, AT&T Intellectual Property */
+/* MIT Licence */
+
+path {
+  fill: none;
+  stroke: none;
+}
+
+.xaxis .tick.major {
+    fill: black;
+    stroke: black;
+    stroke-width: 0.1;
+    opacity: 0.7;
+}
+
+.slideraxis {
+    fill: black;
+    str
