--- a/examples/ldavis/LDAvis.css
+++ b/examples/ldavis/LDAvis.css
@@ -16,4 +16,15 @@ path {
 
 .slideraxis {
     fill: black;
-    str
+    stroke: black;
+    stroke-width: 0.4;
+    opacity: 1;
+}
+
+text {
+    font-family: sans-serif;
+    font-size: 11px;
+}
+
+/* IPython Notebook CSS to allow visualization to fit */
+/* I'm open to a better way of accomplishing this goal.
